Fixed using enterkey, thanks matilda. broke apart addRow function to make the scope available to the whole document. added text align to css

--- a/style2.css
+++ b/style2.css
@@ -79,6 +79,7 @@ button {
 
 .habitname {
     position: relative;
+    text-align: center;
     padding: 8px 20px;
     border-radius: 25px;
     min-width: 100px;
